# Triage-Agent

./: .env.example  .gitignore  .pre-commit-config.yaml  EVAL_REPORT.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
agent/: __init__.py  deps.py  executor.py  graph.py  guardrails.py  llm.py  nodes.py  state.py  tools.py
agent/prompts/: draft_fix.md  duplicate_check.md  severity.md
api/: Dockerfile  __init__.py  main.py  webhook.py
api/templates/: dashboard.html
eval/: __init__.py  dataset.py  judge.py  llm_meter.py  metrics.py  report.py  run_eval.py
eval/prompts/: fix_judge.md
eval/results/: dataset.json
rag/: __init__.py  chunking.py  embeddings.py  ingest.py  rerank.py  retrieve.py  schemas.py  vector_store.py
requirements/: api.txt  base.txt  worker.txt
sandbox/: __init__.py  policy.py  runner.py  schemas.py
scripts/: .gitkeep  simulate_webhook.py
shared/: __init__.py  config.py  github_client.py  queue.py  run_store.py  schemas.py
tests/: __init__.py  test_agent_graph.py  test_chunking.py  test_config.py  test_guardrails.py  test_metrics.py  test_retrieve.py  test_run_store.py  test_sandbox.py  test_webhook.py
worker/: Dockerfile  __init__.py  handler.py  main.py  reindex.py
