[project]
name = "triage-agent"
version = "0.1.0"
description = "Autonomous GitHub issue-triage agent (RAG + sandboxed repro + safe PR drafting)."
requires-python = ">=3.11"
readme = "README.md"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/F = pycodestyle+pyflakes, I = isort, UP = pyupgrade, B = bugbear.
select = ["E", "F", "I", "UP", "B"]
# Line length is owned by black/line-length above; don't double-report E501.
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
